Adicionado revisão e pequenos ajustes

--- a/sections/4-solucao-desenvolvida.tex
+++ b/sections/4-solucao-desenvolvida.tex
@@ -607,22 +607,22 @@ Item {
 
 
 \subsection{Comunicação entre os objetos e plugins}
-% Esta seção descreverá o processo de comunicação entre objetos no aplicativo e o uso correto dos eventos...
-Comunicação entre os objetos é outro requisito funcional desta arquitetura e consiste em disponibilizar um mecanismo de comunicação entre objetos e plugins facilitado. A seção 4.9 descreveu o uso do sinal \textit{eventNotify} do objeto \textit{Settings}, utilizado por componentes internos e pelos plugins disponibilizados como exemplo na arquitetura. Porém, esse não é o único mecanismo de comunicação disponibilizado, a arquitetura dispõe de uma implementação em C++ do padrão de projeto \textit{Observer} baseado em categorias de eventos. A categoria, neste caso, é uma string que identifica um evento específico e visa notificar apenas os objetos interessados, evitando o \textit{broadcast} na aplicação em que todos os observadores da serão notificados. A implementação do \textit{Observer} permite ainda enviar um argumento para o objeto observador.\par
+Esta seção descreverá o processo de comunicação entre objetos no aplicativo que está também disponível para os plugins.
+A comunicação entre os objetos facilitado é um requisito funcional desta arquitetura e consiste em disponibilizar uma API de alto nível para troca de mensagens entre objetos através de eventos e consiste na implementação do padrão de projeto \textit{Observer}, com os eventos identificados por um nome. Essa API foi desenvolvida através das seguintes classes C++: \textit{Subject} e a outra \textit{Observer}. O nome do evento é uma string que identifica um evento específico e visa notificar apenas os objetos interessados, evitando o \textit{broadcast} na aplicação e consequentemente aumentando o desempenho. Nessa API, é possível enviar um argumento para o objeto observador.\par
 
-A implementação do Observer foi feito por duas classes C++, uma chamada \textit{Subject} e outra \textit{Observer}. Na inicialização da aplicação, a classe \textit{Subject} será instanciada e o objeto registrado no contexto da aplicação. A classe \textit{Observer} será registrada na aplicação como um tipo QML para que os plugins possam utilizá-lo como componente. A classe \textit{Subject} possui um atributo privado \textit{attacheds}, uma instância da classe \textit{QMap} do Qt que guardará um vetor de observadores para cada string que identifica um determinado evento. Quando um objeto deseja observar um evento, ele deve informar o nome do evento e passar uma referência para o observer que será informado quando o evento for disparado. Quando um determinado objeto deseja notificar observadores, ele invocará o método \textit{Subject.notify} passando no primeiro parâmetro uma string que identifica o evento, seguido de um objeto como argumento a ser passado para os observadores e por último, uma referência para sí mesmo que identificá como emissor do evento.
+A classe \textit{Subject} possui um atributo privado \textit{attacheds}, uma instância da classe \textit{QMap} do Qt que guardará um vetor de observadores para cada string que identifica determinado evento. Quando um objeto deseja observar um evento, ele deve primeiramente, informar o nome do evento que deseja ser notificado, e registrar-se no \textit{Subject}. Quando determinado objeto deseja notificar observadores, ele deverá invocar o método \textit{Subject.notify} passando no primeiro parâmetro uma string que identifica o evento, seguido de um objeto contendo o argumento a ser passado para os observadores.
 
-O objeto \textit{Subject} (registrado no contexto da aplicação) disponibiliza os seguintes métodos:
+A classe \textit{Subject} será instanciada na inicialização e registrada no contexto da aplicação identificada como \textit{"Subject"}. Os seguintes métodos são públicos e podem ser invocados pelos plugins:
 
 \begin{itemize}
-	\item \textit{attach} (void): Esse método poderá ser utilizado para adicionar observadores a uma lista de eventos na aplicação e dois parâmetros são requeridos: o primeiro é um ponteiro para o \textit{observer} e o segundo, é uma lista de strings contendo os eventos que o observador deseja ser notificado;
+	\item \textit{attach} (void): Esse método poderá ser utilizado para adicionar observadores a uma lista de eventos na aplicação e dois parâmetros são requeridos: o primeiro é uma referência para o \textit{observer} e o segundo, é uma lista de strings contendo os eventos que o observador deseja ser notificado;
 
-	\item \textit{detach} (void): Esse método poderá ser utilizado para remover um observado de uma lista de eventos na aplicação e dois parâmetros são requeridos: o primeiro é um ponteiro para o \textit{observer} e o segundo é a lista de eventos da qual o observador será removido;
+	\item \textit{detach} (void): Esse método poderá ser utilizado para remover um observador de uma lista de eventos na aplicação e dois parâmetros são requeridos: o primeiro é um ponteiro para o \textit{observer} e o segundo é a lista de eventos da qual o observador será removido;
 
-	\item \textit{notify} (void): Esse método poderá ser utilizado por qualquer objeto da aplicação para notificar observadores de um determinado evento. Esse método requer três parâmetros, o primeiro é uma string contendo o nome do evento, o segundo é um objeto variante contendo o dado a ser passado para o observador e por último um ponteiro \textit{QObject} para o emissor do evento. Ao chamar esse método, o \textit{Subject} irá iterar o vetor de observadores correspondente ao evento enviado, chamando para cada observador o método público \textit{update} que receberá como argumento, o nome do evento em que está sendo notificado, o argumento enviado e uma referência para o objeto emissor.
+	\item \textit{notify} (void): Esse método poderá ser utilizado por qualquer objeto da aplicação para notificar observadores de um determinado evento. Esse método requer dois parâmetros, o primeiro é uma string contendo o nome do evento, o segundo é um objeto variante contendo o dado a ser passado para o observador. Ao chamar esse método, o \textit{Subject} irá iterar o vetor de observadores correspondente ao evento solicitado, chamando para cada observador o método público \textit{update} que receberá como argumento, o nome do evento em que está sendo notificado e o argumento enviado pelo emissor.
 \end{itemize}
 
-Os eventos podem ser adicionados no arquivo de configuração na propriedades \textit{events} e utilizá-los na aplicação através do objeto \textit{Config}. Os eventos devem formar um par de strings no estilo \textit{nome-do-evento.valor}, por exemplo: \textit{Config.events.foo}. Outro detalhe é que \textit{Subject} criará uma \textit{thread} para cada \textit{observer} quando for notificá-los de algum evento. Isso significa que a chamada ao método \textit{update} em cada \textit{observer} será assíncrono para garantir o melhor desempenho. O código a seguir, apresenta um exemplo de como utilizar o \textit{Observer} por objetos nos plugins.
+O desenvolvedor poderá adicionar os eventos que deseja utilizar entre os plugins no arquivo de configuração, na propriedades \textit{events} e utilizá-los via acesso ao objeto \textit{Config}. Os eventos são basicamente strings no estilo e o acesso pode ser feito da seguinte forma: \textit{Config.events.event\_name}. Outro detalhe é que \textit{Subject} criará uma \textit{thread} para cada \textit{observer} quando for notificá-los de algum evento. Isso significa que a chamada ao método \textit{update} em cada \textit{observer} será assíncrono para garantir o melhor desempenho. O código a seguir, apresenta um exemplo de como utilizar o \textit{Observer} por objetos nos plugins.
 
 \begin{center}
 \begin{lstlisting}[language=qml]
@@ -630,6 +630,7 @@ import Observer 1.0
 ...
 Observer {
 	id:observer
+	objectName:"obs1"
 	events:[Config.events.newSourceAdded]
 	onUpdated:database.insert(eventData)
 }
@@ -638,8 +639,8 @@ Item {
 	Component.onCompleted:{
 		//pede ao Subject para adicionar
 		//o observador a lista do evento
-		var event = Config.events.newSourceAdded
-		Subject.attach(observer,event)
+		var evt = Config.events.newSourceAdded
+		Subject.attach(observer,evt)
 	}
 }
 ...
@@ -670,7 +671,7 @@ Item {
 
 
 \subsection{O perfil de usuário}\label{sec:solucao-desenvolvida}
-A arquitetura dispõe o componente \textit{UserProfile.qml} para gerenciar os dados do usuário do aplicativo, ele será instanciado na inicialização da aplicação e setado no objeto \textit{userProfile} se houver login na aplicação, ou seja, se o desenvolvedor definir nas configurações a propriedade \textit{usesLogin} para \textit{true}. Esse objeto (\textit{userProfile}) estará disponível para os plugins como um objeto global, e a propriedade \textit{profile} poderá ser utilizada em \textit{bindings} com outros objetos. No entando, atualizações no perfil do usuário não devem ser feitas diretamente no objeto profile e sim, através de eventos.\par
+A arquitetura dispõe o componente \textit{UserProfile.qml} para gerenciar os dados do usuário do aplicativo, ele será instanciado na inicialização da aplicação e setado no objeto \textit{userProfile} se houver login na aplicação, ou seja, se o desenvolvedor definir nas configurações a propriedade \textit{usesLogin} para \textit{true}. Esse objeto (\textit{userProfile}) estará disponível para os plugins como um objeto global, e a propriedade \textit{profile} poderá ser utilizada em \textit{bindings} com outros objetos. No entanto, atualizações no perfil do usuário não devem ser feitas diretamente na propriedade \textit{profile} e sim, através de eventos.\par
 
 O componente \textit{UserProfile.qml} observará três eventos na aplicação pelo qual os plugins devem utilizá-los para setar ou editar as informações do usuário. O primeiro evento \textit{initUserProfile}, poderá ser utilizado para inicializar o perfil do usuário após o login e o argumento do evento deve conter um objeto enviado pelo serviço \textit{REST} contendo no mínimo os campos \textit{id} e \textit{email}. O segundo evento \textit{setUserProfileData}, deve ser utilizado para atualizar ou adicionar alguma informação ao perfil do usuário. Nesse evento, o argumento deve conter as propriedades \textit{key} com o nome do campo a ser atualizado (ou adicionado) e \textit{value} a informação para o campo correspondente. O terceiro evento \textit{logoutApplication}, deve ser disparado pela página de \textit{logout} para avisar que a seção foi encerrada e o usuário será direcionado para a página de login. No \textit{logout}, o argumento do evento pode ser \textit{false} ou simplesmente \textit{null}. O componente \textit{UserProfile} dispõe das seguintes propriedades:
 
@@ -682,11 +683,11 @@ O componente \textit{UserProfile.qml} observará três eventos na aplicação pe
 	\item \textit{isLoggedIn} (bool): Essa propriedade será definida para \textit{true} quando \textit{profile} for modificado contendo alguma informação válida, ou seja, \textit{id} e \textit{email} (no mínimo). \textit{isLoggedIn} será \textit{false} quando não houver informações em \textit{profile}. Essa propriedade será modificada internamente após os eventos \textit{initUserProfile} e \textit{logoutApplication}. O valor de \textit{isLoggedIn} será persistido sempre que for modificado.
 \end{itemize}
 
-O objeto \textit{userProfile} invocará uma função interna que carregará a página inicial (\textit{home page}) após \textit{profile} ser modificado, ou seja, após o evento \textit{initUserProfile}. A página de login também será carregada após o evento \textit{logoutApplication}. A arquitetura disponibiliza o plugin de exemplo \textit{Session} e alguns arquivos que demonstram a utilização do \textit{login}, \textit{logout}, exibição do perfil e como solicitar alterações nos dados do usuário através do evento \textit{setUserProfileData} (o arquivo ProfileEdit.qml).\par
+O objeto \textit{userProfile} invocará uma função interna que carregará a página inicial (\textit{home page}) após \textit{profile} ser modificado, ou seja, após o evento \textit{initUserProfile}. A página de login também será carregada após o evento \textit{logoutApplication}. A arquitetura disponibiliza o plugin de exemplo \textit{Login} contendo alguns arquivos que demonstram a utilização do \textit{login}, \textit{logout}, exibição do perfil e como solicitar alterações nos dados do usuário através do evento \textit{setUserProfileData} (o arquivo ProfileEdit.qml).\par
 
-É importante destacar, que após o sucesso do primeiro login, não será necessário logar novamente até que o usuário faça logout ou limpe o cache do aplicativo nas configurações do dispositivo.\par
+É importante destacar, que após o sucesso do primeiro login, não será necessário logar novamente até que o usuário faça logout ou limpe o cache do aplicativo nas configurações do dispositivo. Além disso, a imagem presente em \textit{assets/default\_user\_profile.svg} será setado no perfil do usuário após o login, na propriedade \textit{image\_url} e o desenvolvedor poderá sobrescrever esse arquivo por uma imagem de sua preferência.\par
 
-O código a seguir, apresenta um exemplo de como utilizar o perfil do usuário através do objeto \textit{userProfile}.
+O código a seguir, apresenta um exemplo de como utilizar o perfil do usuário através do objeto \textit{userProfile}, exibindo o informações como email e imagem do usuário.
 
 \begin{center}
 \begin{lstlisting}[language=qml]
@@ -718,20 +719,20 @@ Column {
 
 
 \subsection{O Componente BasePage}\label{sec:solucao-desenvolvida}
-O componente \textit{BasePage} é um arquivo genérico que fornece algumas propriedades para as páginas dos plugins, além de fazer \textit{bindings} com o \textit{ToolBar}, o \textit{TabBar}. \textit{BasePage} deverá ser utilizada pelas páginas de plugins sempre que possível. Esse componente irá instanciar um \textit{ListView} contendo um \textit{ListModel} e um \textit{RequestHttp} para facilitar o trabalho do programador e reduzir a escrita de código pelos plugins. \textit{BasePage} pode ser visto como uma classe abstrata que possui alguns atributos e métodos agregados. As propriedades a seguir, compõem o \textit{BasePage} e devem ser utilizadas para customizar a estrutura das páginas.
+O componente \textit{BasePage} é um arquivo genérico que fornece algumas propriedades para as páginas dos plugins, além de fazer \textit{bindings} com o \textit{ToolBar}, o \textit{TabBar}. \textit{BasePage} deverá ser utilizada pelas páginas de plugins sempre que possível. Esse componente irá instanciar um \textit{ListView} contendo um \textit{ListModel} e um \textit{RequestHttp} para facilitar o trabalho do programador e reduzir a escrita de código pelos plugins. \textit{BasePage} pode ser visto como uma classe abstrata que possui alguns objetos agregados e métodos públicos prontos para uso pelos componentes que estenderem \textit{BasePage}. As propriedades a seguir, compõem o \textit{BasePage} e devem ser utilizadas para customizar o layout da página.
 
 \begin{itemize}
-	\item \textit{toolBarButtons} (array): uma lista de objetos contendo as propriedades de um botão \textit{ToolBarButton} a serem adicionados no \textit{ToolBar} dinamicamente quando a página for carregada. Cada objeto deve conter as seguintes propriedades: \textit{iconName}, uma string contendo o nome de um ícone do \textit{Awesome Icons} e \textit{callback} uma função javascript que será invocada quando o botão for pressionado pelo usuário;
+	\item \textit{toolBarButtons} (array): uma lista de objetos contendo as propriedades de um botão \textit{ToolBarButton} a serem adicionados no \textit{ToolBar} dinamicamente, quando a página for carregada ou quando ficar visível para o usuário. Cada objeto deve conter as seguintes propriedades: \textit{iconName}, uma string contendo o nome de um ícone do \textit{Awesome Icons} e \textit{callback} uma função javascript que será invocada quando o botão for pressionado pelo usuário;
 
-	\item \textit{toolBarState} (string): essa propriedade poderá ser utilizada para definir o estado do \textit{ToolBar} e três valores estão disponíveis. O primeiro deles é \textit{normal} que é o valor \textit{default}. O segundo valor é \textit{goBack} e quando for utilizado, permitirá ao usuário sair da página atual e retornar para a página anterior clicando em uma seta para a esquerda, essa seta será adicionada pelo \textit{ToolBar}. O último valor é \textit{search} que exibirá um campo de busca no \textit{ToolBar} permitindo ao usuário digitar um texto para pesquisar algo na \textit{view} (página corrente). No modo \textit{seach}, a propriedade \textit{searchText} também de \textit{BasePage} receberá uma cópia do texto digitado pelo usuário;
+	\item \textit{toolBarState} (string): essa propriedade poderá ser utilizada para definir o estado do \textit{ToolBar} e três valores estão disponíveis. O primeiro deles é \textit{normal} que é o valor \textit{default}. O segundo valor é \textit{goBack} e quando for utilizado, permitirá ao usuário sair da página atual e retornar para a página anterior clicando em uma seta para a esquerda, essa seta será adicionada pelo \textit{ToolBar}. O último valor é \textit{search} que exibirá um campo de busca no \textit{ToolBar} permitindo ao usuário digitar um texto para pesquisar algo na \textit{view} da página ativa. No modo \textit{seach}, a propriedade \textit{searchText} também de \textit{BasePage} receberá uma cópia do texto digitado pelo usuário e o plugin deverá criar uma conexão com \textit{searchText} para realizar a busca do conteúdo solicitado pelo usuário;
 
-	\item \textit{absPath} (string): essa propriedade deverá ser definida pela página para que o menu declare um \textit{bind} entre o item correspondente (na lista de itens do menu, tornado-o selecionado) com a página atualmente vista pelo usuário. Para setar essa propriedade, a página poderá utilizar o nome do plugin a partir do objeto \textit{Config.plugins} + o nome do arquivo QML correspondente. Por exemplo, considerando um plugin chamado \textit{LoadMessages} e a página \textit{View.qml}, essa propriedade pode ser definida da seguinte forma: \textit{absPath: Config.plugins.loadmessages + "View.qml"};
+	\item \textit{absPath} (string): essa propriedade deverá ser definida para que o menu declare um \textit{bind} entre o item correspondente (na lista de itens do menu, tornado-o selecionado) com a página atualmente vista pelo usuário. Para setar essa propriedade, a página poderá utilizar o \textit{path} do plugin mais o nome do arquivo, por exemplo: \textit{Config.plugins.plugin\_name} + o nome do arquivo QML correspondente a página. Outro exemplo, considerando um plugin chamado \textit{LoadMessages} e a página \textit{View.qml}, essa propriedade pode ser definida da seguinte forma: \textit{absPath: Config.plugins.loadmessages + "View.qml"};
 
-	\item \textit{showToolBar} (bool): essa propriedade deverá ser utilizada se a página deseja ocultar o menu do layout em pilha, que é uma instancia do \textit{ToolBar} do \textit{Quick Controls};
+	\item \textit{showToolBar} (bool): essa propriedade deverá ser utilizada se a página deseja ocultar o \textit{ToolBar};
 
 	\item \textit{showTabBar} (bool): essa propriedade deverá ser utilizada quando a página precisar ocultar o menu do layout em linha, que é uma instancia do \textit{TabBar} do \textit{Quick Controls};
 
-	\item \textit{hasNetworkRequest} (bool): essa propriedade é \textit{true} por \textit{default} e se mantida com o valor padrão, instanciará um objeto \textit{RequestHttp.qml} quando a página for carregada. Outra propriedade de \textit{BasePage} \textit{requestHttp} receberá uma referência para esse objeto e poderá ser utilizada pela página para fazer requisições HTTP. No entanto, se a página não realizará requisições HTTP, deverá setar \textit{false} para essa propriedade;
+	\item \textit{hasNetworkRequest} (bool): essa propriedade é \textit{true} por \textit{default} e se mantida com o valor padrão, instanciará um objeto \textit{RequestHttp} quando a página for carregada. Outra propriedade de \textit{BasePage} associada a esta, é \textit{requestHttp} que receberá uma referência para o objeto e poderá ser utilizada pela página para fazer requisições HTTP. No entanto, se a página não realizará requisições HTTP, deverá setar \textit{false} nessa propriedade;
 
 	\item \textit{hasListView} (bool): essa propriedade é \textit{true} por \textit{default} e se mantida com o valor padrão, instanciará um \textit{ListView} do \textit{Quick Controls} e passará a referência para a propriedade \textit{listView}. O \textit{ListView} já terá um \textit{ListModel} do QML que será atribuído a propriedade \textit{listViewModel} também de \textit{BasePage} e poderá ser utilizada pela página para fazer \textit{append} ou remover itens da \textit{view};
 
@@ -739,7 +740,7 @@ O componente \textit{BasePage} é um arquivo genérico que fornece algumas propr
 
 	\item \textit{isActivePage} (bool): essa propriedade fará um \textit{bind} com o \textit{window.currentPage} que é uma referência para a página atualmente vista pelo usuário;
 
-	\item \textit{listViewDelegate} (Component): essa propriedade é \textit{null} por \textit{default} e deve ser definida pela página quando utilizar \textit{ListView} atribuindo ao \textit{delegate} correspondente. Quando o \textit{ListView} for instanciado, essa propriedade será atribuída a \textit{delegate} do \textit{ListView};
+	\item \textit{listViewDelegate} (Component): essa propriedade é \textit{null} por \textit{default} e deve ser definida pela página quando utilizar \textit{ListView} atribuindo ao \textit{delegate} correspondente. Se \textit{ListView} for instanciado, essa propriedade será atribuída ao \textit{delegate} do \textit{ListView};
 
 	\item \textit{pageBackgroundColor} (Color): essa propriedade pode ser utilizada para definir uma cor de fundo personalizada para a página, pode ser tanto hexadecimal como RGBA. A cor padrão utilizada será o valor definido no arquivo de configuração na propriedade \textit{theme.pageBackgroundColor}.
 \end{itemize}
@@ -780,28 +781,27 @@ Components.BasePage {
 
 
 \subsection{Componentes Reusáveis}\label{sec:solucao-desenvolvida}
-A arquitetura dispõe de dez componentes reusáveis para os plugins, alguns são componentes visuais e outros não. Para utilizá-los basta adicionar a diretiva \textit{import "qrc:/publicComponentes/"} e declarar um objeto QML. Os componentes disponíveis serão descritos a seguir:
+A arquitetura dispõe de dez componentes reusáveis para os plugins, alguns são visuais e outros não. Para utilizá-los basta adicionar a diretiva \textit{import "qrc:/publicComponentes/"} e declarar um objeto QML. Os componentes disponíveis serão descritos a seguir:
 
 \begin{itemize}
-	\item \textit{AwesomeIcon.qml}: esse componente consiste de um \textit{RoundButton} do \textit{Quick Controls} com a propriedade \textit{flat} setado para \textit{true} para que o background seja transparente. Ele utiliza um arquivo de fonte OTF contendo setecentos e vinte ícones da biblioteca \textit{Awesome Icons} e poderá ser utilizado para exibir um ícone clicável nos fragmentos de uma página. As propriedades \textit{name}, \textit{size} e \textit{color} podem ser utilizadas para definir o ícone, o tamanho e a cor do ícone;
+	\item \textit{AwesomeIcon.qml}: esse componente consiste utiliza um arquivo de fonte OTF contendo 720 ícones da biblioteca \textit{Awesome Icons} e poderá ser utilizado para exibir um ícone clicável nos fragmentos de uma página. As propriedades \textit{name}, \textit{size} e \textit{color} podem ser utilizadas para definir o ícone, o tamanho e a cor do ícone;
 
-	\item \textit{BasePage.qml}: esse componente é o elemento descrito na seção anterior e deve ser utilizado pelos plugins nas páginas no aplicativo;
+	\item \textit{BasePage.qml}: esse componente é o elemento descrito na seção anterior e pode ser utilizado pelos plugins nas páginas no aplicativo;
 
-	\item \textit{CameraCapture.qml}: esse componente pode ser utilizado para abrir a câmera do dispositivo móvel ou a \textit{webcam} em laptops. Ao adicionar esse componente no \textit{StackVIew}, ele inicializará a câmera disponível no dispositivo e permitirá ao usuário capturar uma imagem clicando em qualquer ponto da tela ou, utilizando o botão \textit{photo} no rodapé da janela. Outros dois botões estarão disponíveis nos cantos da tela. O botão do lado esquerdo permitirá ao usuário alternar entre as câmeras frontal ou de fundo (se disponível), e o do lado direito, abre a janela para seleção de arquivos no dispositivo. Se o usuário capturar uma imagem com a câmera, a imagem capturada será salva em um diretório público do dispositivo e o evento \textit{cameraImageSaved} será disparado contendo como argumento do evento, uma string com o \textit{path} da imagem;
+	\item \textit{CameraCapture.qml}: esse componente pode ser utilizado para abrir a câmera do dispositivo móvel ou a \textit{webcam} em laptops. Ao adicionar esse componente no \textit{StackVIew}, ele inicializará a câmera disponível no dispositivo e permitirá ao usuário capturar uma imagem clicando em qualquer ponto da tela ou, utilizando o botão \textit{photo} no rodapé da janela. Outros dois botões estarão disponíveis nos cantos da tela. O botão do lado esquerdo permitirá ao usuário alternar entre as câmeras frontal ou de fundo (se disponível), e o do lado direito, abre a janela para seleção de arquivos no dispositivo. Se o usuário capturar uma imagem com a câmera, a imagem capturada será salva em um diretório público do dispositivo e o evento \textit{cameraImageSaved} será disparado passando como argumento, uma string com o \textit{path} da imagem;
 
-	\item \textit{CustomListView.qml}: esse componente \textit{extends} o \textit{ListView} do \textit{Quick Controls} e já dispõe de um \textit{ListModel} que será instanciado e definido como model do \textit{ListView}. Também será adicionado efeitos de transição (quando um item for adicionado ou removido), além de um objeto \textit{ScrollIndicator} que exibirá uma barra de rolagem vertical dinamicamente;
+	\item \textit{CustomListView.qml}: esse componente \textit{extends} o \textit{ListView} do \textit{Quick Controls} e já dispõe de um \textit{ListModel} que será instanciado e definido como \textit{model} do \textit{ListView}. Também será adicionado efeitos de transição, além de um objeto \textit{ScrollIndicator} que exibirá uma barra de rolagem vertical dinamicamente;
 
 	\item \textit{Datepicker.qml}: esse componente pode ser utilizado para exibir um caledário contendo opção de seleção de dia, mês e ano. Após o usuário selecionar uma data, o sinal \textit{dateSelected(int day, int month, int year)} será emitido pelo objeto;
 
-	\item \textit{ListItem.qml}: esse componente é um \textit{ItemDelegate} do \textit{Quick Controls} e permite adicionar até quatro elementos visuais, além de uma borda no rodapé que será utilizada como separador em uma lista de elementos. A utilização desse componente pode ser feita tanto como \textit{delegate} de um \textit{ListView} como em uma página dentro de um \textit{ColumnLayout}.\par
-	Os elementos visuais são: um ícone do \textit{Awesome Icon} através da propriedade \textit{primaryIconName} ou uma imagem setando o \textit{source} na propriedade \textit{primaryImageSource} e será posicionado no lado esquerdo e centralizado verticalmente.\par
+	\item \textit{ListItem.qml}: esse componente é um \textit{ItemDelegate} do \textit{Quick Controls} e permite adicionar até quatro elementos visuais, além de uma borda no rodapé que será utilizada como separador em uma lista de elementos. A utilização desse componente pode ser feita tanto como \textit{delegate} de um \textit{ListView} como em uma página dentro de um \textit{ColumnLayout}. Os elementos visuais são: um ícone do \textit{Awesome Icon} através da propriedade \textit{primaryIconName} ou uma imagem setando o \textit{source} na propriedade \textit{primaryImageSource} e será posicionado no lado esquerdo e centralizado verticalmente.\par
 	Ao lado direito do ícone (lateral esquerdo, se for definido), pode ser adicionado um texto e uma descrição através das propriedades \textit{primaryLabelText} e \textit{secondaryLabelText} respectivamente, um abaixo do outro, sendo a descrição com o \textit{font-size} e opacidade reduzidos. O último elemento visual, é o mesmo do primeiro só que, posicionado no lado direito e pode ser um ícone do \textit{Awesome Icon} ou uma imagem. A imagem em ambos os lados pode ser um endereço remoto ou a partir do \textit{qrc};
 
-	\item \textit{PasswordField.qml}: esse componente \textit{extends} o \textit{TextField} do \textit{Quick Controls} e pode ser utilizado para exibir um campo de senha para o usuário, contendo um ícone do \textit{Awesome} ao lado direito centralizado verticamente. O ícone permitirá exibir a senha digitada no campo quando for clicado, alternando o valor da propriedade \textit{echoMode} entre \textit{Password} ou \textit{Normal};
+	\item \textit{PasswordField.qml}: esse componente \textit{extends} o \textit{TextField} do \textit{Quick Controls} e pode ser utilizado para exibir um campo de senha para o usuário, contendo um ícone do \textit{Awesome} ao lado direito centralizado verticamente. O ícone permitirá exibir a senha digitada no campo quando for clicado, alternando o valor da propriedade \textit{echoMode} entre \textit{Password} e \textit{Normal};
 
-	\item \textit{PhotoSelection.qml}: esse componente é um \textit{Popup} do \textit{Quick Controls} e pode ser utilizado para exibir uma lista vertical de opções clicáveis para o usuário, três opções estão disponíveis: A primeira opção, ao ser clicada, abre a câmera do dispositivo, ou seja, irá instanciar \textit{CameraCapture.qml}. A segunda opção abrirá a galeria de imagens do dispositivo para seleção de um único arquivo. A terceira opção, ao ser clicada, nada será feito internamente, apenas emitirá o sinal \textit{removeCurrentPhoto} para que algum plugin possa executar essa ação de remover a imagem de perfil do usuário;
+	\item \textit{PhotoSelection.qml}: esse componente é um \textit{Popup} do \textit{Quick Controls} e pode ser utilizado para exibir uma lista vertical de itens clicáveis para o usuário. Três opções estão disponíveis: A primeira opção, ao ser clicada, abre a câmera do dispositivo, ou seja, irá instanciar \textit{CameraCapture.qml}. A segunda opção abrirá a galeria de imagens do dispositivo para seleção de um único arquivo. A terceira opção, ao ser clicada, nada será feito internamente, apenas emitirá o sinal \textit{removeCurrentPhoto} para que algum plugin possa executar essa ação de remover a imagem de perfil do usuário;
 
-	\item \textit{RoundedImage.qml}: esse componente exibe uma imagem arredondada e dispõe as propriedades \textit{imgSource} para o \textit{path} da imagem (local ou remota) e \textit{borderColor} para definir uma cor para a borda (o padrão é transparente). A imagem será adicionada em um retângulo com um \textit{MouseArea}, tornando possível capturar eventos de \textit{click} ou pressionamento na imagem;
+	\item \textit{RoundedImage.qml}: esse componente exibe uma imagem circular e dispõe as propriedades \textit{imgSource} para o \textit{path} da imagem (local ou remota) e \textit{borderColor} para definir uma cor para a borda (o padrão é transparente). A imagem será adicionada em um retângulo com um \textit{MouseArea}, tornando possível capturar eventos de \textit{click} ou pressionamento na imagem;
 
 	\item \textit{TimePicker.qml}: esse componente exibirá um relógio baseado em \textit{hora:minuto:segundos}. Ele \textit{extends} \textit{Popup} do \textit{Quick Controls} e para abrir o diálogo, é preciso chamar o método \textit{open()} a partir do objeto declarado. Quando o usuário selecionar a hora e clicar no botão \textit{OK}, o sinal \textit{timeSelected(var time)} será emitido.
 \end{itemize}
@@ -810,7 +810,7 @@ A arquitetura dispõe de dez componentes reusáveis para os plugins, alguns são
 \subsection{Fluxo de execução}\label{sec:solucao-desenvolvida}
 A figura exibida no final desta seção, demonstra o \textit{workflow} de um aplicativo baseado nesta arquitetura. As aplicações Qt possuem nas plataformas mobile, objetos \textit{Java} e \textit{ObjectiveC} no android e iOS respectivamente, que inicializam o aplicativo em cada plataforma e em seguida executam a aplicação tendo como ponto de entrada o \textit{main.cpp}.\par
 
-Os elementos visuais serão carregados no \textit{main.qml} que será instanciado no último passo antes de iniciar o \textit{loop} da aplicação. O \textit{main.qml} corresponde a \textit{ApplicationWindow} do \textit{Quick Controls} e poderá ser acessado por qualquer objeto através do id \textit{window}. Os \textit{listeners} serão carregados quando \textit{window} estiver pronto e poderão acessar qualquer uma das propriedades declaradas no escopo do \textit{window}, tais como \textit{userProfile}. O \textit{window} contém dois \textit{widgets} que podem ser utilizados para exibir avisos ao usuário. Os \textit{widgets} são \textit{Snackbar} e \textit{Toast} e foram inspirados nos respectivos componentes do \textit{Material Design}. Os \textit{widgets} dispõe da função \textit{show} que exige uma string como parâmetro, essa string será o texto exibido ao usuário.\par
+Os elementos visuais serão carregados no \textit{main.qml} que será instanciado no último passo antes de iniciar o \textit{loop} da aplicação. O \textit{main.qml} corresponde a \textit{ApplicationWindow} do \textit{Quick Controls} e poderá ser acessado por qualquer objeto através do id \textit{window}. Os \textit{listeners} serão carregados quando \textit{window} estiver pronto e poderão acessar qualquer uma das propriedades declaradas no escopo do \textit{window}, tais como \textit{userProfile}. O \textit{window} contém dois \textit{widgets} que podem ser utilizados para exibir avisos ao usuário. Os \textit{widgets} são \textit{Snackbar}\footnote{https://material.io/guidelines/components/snackbars-toasts.html} e \textit{Toast} e foram inspirados nos respectivos componentes do \textit{Material Design}\footnote{https://material.io/guidelines}. Os \textit{widgets} dispõe da função \textit{show} que exige uma string como parâmetro, essa string será o texto exibido ao usuário.\par
 
 A figura a seguir, apresenta de uma forma resumida o fluxo de inicialização e a sequência de objetos instanciados em um aplicativo baseado nesta arquitetura.
 
@@ -830,7 +830,7 @@ Para utilizar a arquitetura desenvolvida, é necessário seguir uma determinada 
 
 	\item Em seguida, basta clonar o projeto para a computador que será utilizado. É possível também, clonar a partir da página do projeto e alterar a url de origem.
 
-	\item Após finalizar o processo de clonagem via git, renomear a pasta clonada e o arquivo \textit{tcc.pro} para o nome do aplicativo a ser desenvolvido.
+	\item Após finalizar o processo de clone via git, renomear a pasta clonada e o arquivo \textit{tcc.pro} para o nome do aplicativo a ser desenvolvido.
 
 	\item Importar o projeto (arquivo .pro) no \textit{QtCreator} e configurar as plataformas suportadas pelo aplicativo.
 
@@ -844,9 +844,9 @@ Para utilizar a arquitetura desenvolvida, é necessário seguir uma determinada 
 
 	\item Para customizar as cores do aplicativo no android (\textit{Action Bar}, \textit{Status Bar} e na janela do aplicativo), basta editar o arquivo \textit{android/res/values/colors.xml}. A cor definida em \textit{colorPrimary} será utilizada como cor de fundo no ícone de notificações via \textit{push} ou local.
 
-	\item Em seguida, adicionar os ícones do aplicativo no diretório \textit{android/res/drawable-(*)dpi} e \textit{ios/icons}. O projeto vem com ícones nos tamanhos ideais (para android). No android, é possível utilizar alguma ferramenta\footnote{https://jgilfelt.github.io/AndroidAssetStudio/icons-launcher.html} online para gerar os ícones. No iOS, é recomendável utilizar a interface do \textit{XCode} para importar os ícones, que serão mapeados no arquivo xml \textit{Info.plist} que é equivalente ao \textit{AndroidManifest.xml}.
+	\item Em seguida, adicionar os ícones do aplicativo no diretório \textit{android/res/drawable-(*)dpi} e \textit{ios/icons}. O projeto vem com ícones nos tamanhos ideais (para android). No android, é possível utilizar alguma ferramenta online\footnote{https://jgilfelt.github.io/AndroidAssetStudio/icons-launcher.html} para gerar os ícones. No iOS, é recomendável utilizar a interface do \textit{XCode} para importar os ícones, eles serão mapeados no arquivo xml \textit{Info.plist} que é equivalente ao \textit{AndroidManifest.xml}.
 
-	\item Se algum plugin precisar exibir a logo ou o ícone do aplicativo, deve ser adicionado uma cópia de um ícone na pasta \textit{images} que está na raiz do projeto. Os ícones da pasta \textit{android} ou \textit{ios} não serão acessíveis por objetos da aplicação e o ícone nesta pasta será utilizado em modo desktop. Neste mesmo diretório, está a imagem \textit{drawer.jpg} utilizada no menu do layout em pilha (\textit{Drawer menu}), ela será carregada se a propriedade \textit{showDrawerImage} for \textit{true} no arquivo de configuração e pode ser substituída pelo programador. A imagem \textit{default\_user\_image.svg} será utilizada no perfil do usuário e também pode ser substituída por outra que combine com o design do aplicativo.
+	\item Se algum plugin precisar exibir a logo ou o ícone do aplicativo, deve ser adicionado uma cópia de um ícone na pasta \textit{assets} que está na raiz do projeto. Os ícones da pasta \textit{android} ou \textit{ios} não serão acessíveis por objetos da aplicação e o ícone nesta pasta será utilizado em modo desktop. Neste mesmo diretório, está a imagem \textit{drawer.jpg} utilizada no menu do layout em pilha, ela será carregada se a propriedade \textit{showDrawerImage} for \textit{true} no arquivo de configuração e pode ser substituída pelo programador. A imagem \textit{default\_user\_image.svg} será utilizada no perfil do usuário e também pode ser substituída por outra que combine com o design do aplicativo.
 
-	\item Escreva os plugins. As funcionalidades do aplicativo deverão ser implementadas através de plugins. É possível iniciar o desenvolvimento de um plugin a partir dos exemplos fornecidos. Os plugins não serão mapeados em arquivo qrc sendo necessário criá-los manualmente, mantendo-os em uma pasta com o nome do plugin seguido de um arquivo \textit{config.json}, além de aquivos QML e imagens. Tudo que tiver na pasta do plugin será empacotado no APK ou IPA. Não é recomendável utilizar o \textit{wizard} de adição de arquivos do \textit{QtCreator}, pois ele adicionará os arquivos em \textit{qml.qrc}, que contém os componentes internos e reutilizáveis criando um acoplamento entre plugins e núcleo, violando um requisito não funcional desta arquitetura.
+	\item O último passo é implementar as \textit{features} do aplicativo através de plugins. É possível iniciar o desenvolvimento de um plugin a partir dos exemplos fornecidos. Os plugins não serão mapeados em arquivo qrc sendo necessário criá-los manualmente, mantendo-os em uma pasta com o nome do plugin seguido de um arquivo \textit{config.json}, além de aquivos QML e imagens. Tudo que tiver na pasta do plugin será empacotado no APK ou IPA. Não é recomendável utilizar o \textit{wizard} de adição de arquivos do \textit{QtCreator}, pois ele adicionará os arquivos em \textit{public.qrc} ou \textit{private.qrc}, que contém os componentes internos e reutilizáveis criando um acoplamento entre plugins e núcleo, violando um requisito não funcional desta arquitetura.
 \end{enumerate}
